# ferrOS

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
OSdev-utils/: Cargo.toml
notes/: main.tex
src/: debug.rs  gdt.rs  hw_ops.rs  idt.rs  main.rs  panic.rs  std.rs  vga.rs
src/memory/: Cargo.toml
src/memory/src/: lib.rs
