[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "ferrOS"
test = false
bench = false

[package]
name = "ferrOS"
version = "0.1.0"
edition = "2024"

[dependencies]
# bootloader = { version = "0.9", features = ["map_physical_memory"] }
bootloader = "0.9"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.10.0"
volatile = "0.2.6"
x86_64 = "0.15.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
